golang/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-deployment
spec:
 replicas: 1
 selector:
   matchLabels:
     app: nginx
 template:
   metadata:
     labels:
       app: nginx
   spec:
     containers:
     - name: nginx
       image: nginx:latest
       ports:
       - containerPort: 80
       volumeMounts:
       - name: html
         mountPath: /usr/share/nginx/html
       # - name: nginx-config
         # mountPath: /etc/nginx/nginx.conf
         # subPath: nginx.conf  
     volumes:
     - name: html
       hostPath:
         path: /Users/pavelkozlov/Documents/Golang_Python/golang/testhtml
         type: Directory
     # - name: nginx-config
     #   configMap:
     #     name: nginx-config # place ConfigMap `nginx-conf` on /etc/nginx
     #     items:
     #       - key: nginx.conf
     #         path: nginx.conf
