golang/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"rtty-deployment","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"rtty"}},"template":{"metadata":{"labels":{"app":"rtty"}},"spec":{"containers":[{"env":[{"name":"TERM","value":"xterm"},{"name":"PORT","value":"9994"}],"image":"pawwlyk52/rtty_user","name":"rtty","ports":[{"containerPort":9994}]}],"shareProcessNamespace":true}}}}
  creationTimestamp: "2024-02-01T22:23:01Z"
  generation: 1
  name: rtty-deployment
  namespace: default
  resourceVersion: "1182511"
  uid: c0d56960-7fc0-4adf-8fd2-3f8bcf5da2d2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rtty
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rtty
    spec:
      containers:
      - env:
        - name: TERM
          value: xterm
        - name: PORT
          value: "9994"
        image: pawwlyk52/rtty_user
        imagePullPolicy: Always
        name: rtty
        ports:
        - containerPort: 9994
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: true
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-02-01T22:23:05Z"
    lastUpdateTime: "2024-02-01T22:23:05Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-02-01T22:23:01Z"
    lastUpdateTime: "2024-02-01T22:23:05Z"
    message: ReplicaSet "rtty-deployment-587567db5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
