golang/two_container.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber
  labels:
    app: kuber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: kuber-app-1
        image: bakavets/kuber
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /cache-1
          name: cache-volume
          subPath: container-kuber
      - name: alpine-app
        image: alpine
        command: ["sh", "-c", "echo Hello, world! && sleep 3600"]
        volumeMounts:
        - mountPath: /cache-2
          name: cache-volume
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/data
        # - mountPath: /cache-2
          name: cache-volume
          subPath: container-nginx
      volumes:
      - name: cache-volume
        emptyDir: {}
