golang/LB.yaml
apiVersion: v1
kind: Service
metadata:
 name: example-lb
 namespace: ingress-nginx
spec:
 selector:
    app.kubernetes.io/component: controller                                                                                                                           
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
 ports:
    - port: 80
      targetPort: 80
 type: LoadBalancer
