golang/k3sservice.yaml
  # apiVersion: v1
  # kind: Service
  # metadata:
  #   name: nginx-service
  # spec:
  #   type: LoadBalancer
  #   ports:
  #   - port: 80
  #   selector:
  #     app: nginx


apiVersion: v1
kind: Service
metadata:
 name: nginx-service
 labels:
   app: nginx
spec:
 selector:
   app: nginx
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
 type: NodePort
