golang/rtty_kubectl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: rtty-deployment-kubectl
spec:
 serviceAccount: 
 replicas: 1
 selector:
   matchLabels:
     app: rtty-kubectl
 template:
   metadata:
     labels:
       app: rtty-kubectl
   spec:
     serviceAccount: build-robot
     shareProcessNamespace: true
     containers:
     - name: rtty-kubectl
       image: pawwlyk52/kubectl
       # imagePullPolicy: Never
       ports:
       - containerPort: 9994
---

apiVersion: v1
kind: Service
metadata:
 name: rtty-service-kubectl
 labels:
   app: rtty-kubectl
spec:
 selector:
   app: rtty-kubectl
 ports:
   - protocol: TCP
     port: 9994
     targetPort: 9994
     # nodePort: 30081
 type: ClusterIP

---

# apiVersion: v1
# kind: Service
# metadata:
#   name: rttylb
#   annotations:
# spec:
#   ports:
#   - port: 80
#     targetPort: 9994
#   selector:
#     app: rtty
#   type: LoadBalancer
