golang/ingress_traefik.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: test-ingress
 annotations: 
    # nginx.ingress.kubernetes.io/websocket-services: rtty-service
    # kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: traefik
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nginx.ingress.kubernetes.io/server-snippets: |
    #  location / {
    #   proxysetheader Upgrade $httpupgrade;
    #   proxyhttpversion 1.1;
    #   proxysetheader X-Forwarded-Host $httphost;
    #   proxysetheader X-Forwarded-Proto $scheme;
    #   proxysetheader X-Forwarded-For $remoteaddr;
    #   proxysetheader Host $host;
    #   proxysetheader Connection "upgrade";
    #   proxycachebypass $httpupgrade;
    #   }
spec:
 # ingressClassName: nginx
 ingressClassName: traefik
 rules:
  -
   http:
     paths:
       - pathType: Prefix
         path: "/"
         backend:
           service:
             name: nginx-service
             port:
               number: 80
       # - pathType: Prefix
       #   path: "/ws"
       #   backend:
       #     service:
       #       name: rtty-service
       #       port:
       #         number: 9994
