golang/wsingress_traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /16d36022-82ff-40fb-b9e8-9f1891fb3635
      - /16d36022-82ff-40fb-b9e8-9f1891fb3333
      - /16d36022-82ff-40fb-b9e8-9f1891fb5555
      - /16d36022-82ff-40fb-b9e8-9f1891fb1111
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ws-test-ingress
 annotations: 
   kubernetes.io/ingress.class: traefik
   traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
spec:
 ingressClassName: traefik
 rules:
 -
  http:
    paths:
      - pathType: Prefix
        path: "/16d36022-82ff-40fb-b9e8-9f1891fb3635/ws"
        backend:
          service:
            name: rtty-service
            port:
              number: 9994
      - pathType: Prefix
        path: "/16d36022-82ff-40fb-b9e8-9f1891fb3333/ws"
        backend:
          service:
            name: rtty-service3
            port:
              number: 9994
      - pathType: Prefix
        path: "/16d36022-82ff-40fb-b9e8-9f1891fb5555/ws"
        backend:
          service:
            name: rtty-service-dind
            port:
              number: 9994
      - pathType: Prefix
        path: "/16d36022-82ff-40fb-b9e8-9f1891fb1111/ws"
        backend:
          service:
            name: rtty-service-kubectl
            port:
              number: 9994
